--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Tetris</title>
+  <link 
+  href="https://fonts.googleapis.com/css?family=Press+Start+2P" 
+  rel="stylesheet"
+/>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="grid">
@@ -18,6 +23,9 @@
     <button onclick="play()" class="play-button">Play</button>
   </div>
 </div>
-
+<script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="board.js"></script>
+<script type="text/javascript" src="piece.js"></script>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
